Fixed z-index for dock

--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -66,6 +66,7 @@ body.gradient {
   width      : 100%;
   background : #000000;
   height     : 100px;
+  z-index    : 10;
 
   @media #{$query-phones} {
     top : 0;
